--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -1,5 +1,7 @@
 @import 'base';
 
+$sidebarWidth: 250px;
+
 .mobileNavCommon {
   position: fixed;
   z-index: 5;
@@ -24,7 +26,7 @@
 
 // this creates an area to trigger the mobile nav off
 .mobileNavOffTrigger {
-  width: calc(100% - 300px);
+  width: calc(100% - #{$sidebarWidth});
   height: 100%;
 }
 .menuClose {
@@ -48,7 +50,10 @@
   top: 0;
   right: 0;
   visibility: visible;
-  width: 300px;
+  width: $sidebarWidth;
+  @include MQ(SM) {
+    width: calc(75px + #{$sidebarWidth});
+  }
   height: 100%;
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   transform: translate3d(0, 0, 0);
@@ -62,18 +67,26 @@
   padding-left: 1em;
   background: $mobNavBgColour;
   height: 100%;
-  width: 300px;
+  @include MQ(SM) {
+    width: calc(75px + #{$sidebarWidth});
+  }
   letter-spacing: 0.1em;
   a {
     // this is responsible for the line underneath the links
     box-shadow: 0 2px 0 rgba(0,0,0,.12);
-    padding-top: 1em;
-    padding-bottom: 0.3em;
+    padding-top: 1.5em;
+    padding-bottom: 0.5em;
     text-decoration: none;
     text-transform: uppercase;
-    // font-weight: 400;
     color: $link-color;
-    font-size: 1.5em;
+    @include MQ(SM) {
+      @media only screen and (orientation: landscape) {
+        font-size: 1em;
+      }
+      font-size: 1.5em;
+      padding-top: 1em;
+      padding-bottom: 0.3em;
+    }
     &:hover {
       color: $dark-gray;
     }
